--- a/settings.html
+++ b/settings.html
@@ -10,9 +10,9 @@
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id = "ent-h"></td>
+        <td><input type="text" id="ent-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text"  id = "ent-m"></td>
+        <td><input type="text" id="ent-m"></td>
         <td><button id="ent-sub">Submit</button>
     </tr>
 </table>
@@ -22,9 +22,9 @@
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id = "sh-h"></td>
+        <td><input type="text" id="sh-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text"  id = "sh-m"></td>
+        <td><input type="text" id="sh-m"></td>
         <td><button id="bc-sub">Submit</button>
     </tr>
 </table>
@@ -33,9 +33,9 @@
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id = "ed-h"></td>
+        <td><input type="text" id="ed-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text"  id = "ed-m"></td>
+        <td><input type="text" id="ed-m"></td>
         <td><button id="ed-sub">Submit</button>
     </tr>
 </table>
@@ -44,14 +44,14 @@
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id = "ne-h"></td>
+        <td><input type="text" id="ne-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text"  id = "ne-m"></td>
+        <td><input type="text" id="ne-m"></td>
         <td><button id="ne-sub">Submit</button>
     </tr>
 </table>
 <script src="settings.js"></script>
-<script type="module" src="content.js"></script>
+<script src="content.js"></script>
 
 </body>
 </html>
