--- a/settings.html
+++ b/settings.html
@@ -1,55 +1,63 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Text Input</title>
-</head>
-<body>
 
 <h1>Genre Settings:</h1>
+
 <p>Entertainment</p>
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id="ent-h"></td>
+        <td><input type="number" id="ent-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text" id="ent-m"></td>
-        <td><button id="ent-sub">Submit</button>
+        <td><input type="number" id="ent-m"></td>
+        <td>
+            <button id="ent-sub">Submit</button>
+        </td>
     </tr>
 </table>
+<p id="ent-display"></p>
 
 <p>Shopping</p>
-<label id="aew">.</label>
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id="sh-h"></td>
+        <td><input type="number" id="sh-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text" id="sh-m"></td>
-        <td><button id="bc-sub">Submit</button>
+        <td><input type="number" id="sh-m"></td>
+        <td>
+            <button id="sh-sub">Submit</button>
+        </td>
     </tr>
 </table>
+<p id="sh-display"></p>
 
 <p>Education</p>
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id="ed-h"></td>
+        <td><input type="number" id="ed-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text" id="ed-m"></td>
-        <td><button id="ed-sub">Submit</button>
+        <td><input type="number" id="ed-m"></td>
+        <td>
+            <button id="ed-sub">Submit</button>
+        </td>
     </tr>
 </table>
+<p id="ed-display"></p>
 
 <p>News</p>
 <table>
     <tr>
         <td><p>Hours:</p></td>
-        <td><input type="text" id="ne-h"></td>
+        <td><input type="number" id="ne-h"></td>
         <td><p>Minutes:</p></td>
-        <td><input type="text" id="ne-m"></td>
-        <td><button id="ne-sub">Submit</button>
+        <td><input type="number" id="ne-m"></td>
+        <td>
+            <button id="ne-sub">Submit</button>
+        </td>
     </tr>
 </table>
+<p id="ne-display"></p>
+
 <script src="settings.js"></script>
 <script src="content.js"></script>
 
